--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": null,
       "id": "679c4ad5-81eb-428d-9665-309ed2c4f870",
       "metadata": {
         "colab": {
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "id": "e7b224dc-9d4c-4345-8361-3bf4840a769e",
       "metadata": {
         "colab": {
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
       "metadata": {
         "colab": {
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "id": "20912ec8-758f-41fe-8bd3-627e20868559",
       "metadata": {
         "colab": {
@@ -709,14 +709,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 10,
       "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
       "metadata": {
+        "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
-        "outputId": "0f4e1d23-6306-417f-f39c-5255ac2c6fee"
+        "outputId": "f67170df-1f51-4d6e-8050-2ce4a25eed58"
       },
       "outputs": [
         {
@@ -727,19 +727,21 @@
             ]
           },
           "metadata": {},
-          "execution_count": 116
+          "execution_count": 10
         }
       ],
       "source": [
         "#si-prime\n",
         "\n",
-        "def isprime(x):\n",
+        "def isPrime(x):\n",
         "  if (x >1):\n",
         "    for y in range(2, x):\n",
         "      if x%y==0:\n",
         "        return False\n",
         "    else:\n",
-        "      return True"
+        "      return True\n",
+        "\n",
+        "isPrime(82)"
       ]
     },
     {
@@ -758,14 +760,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 5,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
         "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c36c48e-551f-4344-ea40-0d5d7f03c39a"
+        "outputId": "a4c218e5-44ac-4bdf-e1a7-6e42cc805980"
       },
       "outputs": [
         {
@@ -776,7 +778,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 143
+          "execution_count": 5
         }
       ],
       "source": [
@@ -784,11 +786,11 @@
         "\n",
         "def taxiPrice(distance):\n",
         "  x=4\n",
-        "  if distance//140 > 1:\n",
-        "    x += (distance//140)*0.25\n",
+        "  if distance//0.14 > 1:\n",
+        "    x += (distance//.14)*0.25\n",
         "    return x\n",
         "\n",
-        "taxiPrice(1000)"
+        "taxiPrice(1)"
       ]
     },
     {
@@ -805,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "2b642bfb-085c-4b8a-8835-e11a367b6906",
       "metadata": {
         "id": "2b642bfb-085c-4b8a-8835-e11a367b6906"
@@ -844,34 +846,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 4,
       "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
       "metadata": {
         "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "51b93f18-0d4e-45cf-9dee-1a4b1b1c3d6f"
+        "outputId": "38fa2f71-53cc-41b8-8f6e-233a28cc779f"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "5"
             ]
           },
           "metadata": {},
-          "execution_count": 140
+          "execution_count": 4
         }
       ],
       "source": [
         "#si-fibonacci\n",
         "\n",
         "def fib(n):\n",
-        "  if n >0:\n",
+        "  while n >=1:\n",
         "    if n==1:\n",
-        "      return 0\n",
+        "      return 1\n",
         "    elif n==2:\n",
         "      return 1\n",
         "    else:\n",
@@ -1020,7 +1022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "id": "3fb1aba0-24c9-4e52-941d-dfd9345df62f",
       "metadata": {
         "id": "3fb1aba0-24c9-4e52-941d-dfd9345df62f"
