--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -760,25 +760,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 29,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
         "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a4c218e5-44ac-4bdf-e1a7-6e42cc805980"
+        "outputId": "3f5b87b4-4205-48b4-8faf-f9889eb820c9"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "5.75"
+              "5.14"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 29
         }
       ],
       "source": [
@@ -786,11 +786,11 @@
         "\n",
         "def taxiPrice(distance):\n",
         "  x=4\n",
-        "  if distance//0.14 > 1:\n",
-        "    x += (distance//.14)*0.25\n",
+        "  if distance >= 0:\n",
+        "    x += distance*(0.25//.14)\n",
         "    return x\n",
         "\n",
-        "taxiPrice(1)"
+        "taxiPrice(1.14)"
       ]
     },
     {
