--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -760,25 +760,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 36,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
         "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f5b87b4-4205-48b4-8faf-f9889eb820c9"
+        "outputId": "2fb0f2d3-0ff4-4966-e77c-0f0ab0ae4f29"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "5.14"
+              "20.07142857142857"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 36
         }
       ],
       "source": [
@@ -787,10 +787,10 @@
         "def taxiPrice(distance):\n",
         "  x=4\n",
         "  if distance >= 0:\n",
-        "    x += distance*(0.25//.14)\n",
+        "    x += distance*(0.25/0.14)\n",
         "    return x\n",
         "\n",
-        "taxiPrice(1.14)"
+        "taxiPrice(9)"
       ]
     },
     {
